--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -5,6 +5,7 @@
 body {
   font-family: "Manrope", sans-serif;
   color: #000000; 
+  background-color: white;
   margin: 0;
   padding: 0;
   min-height: 100vh; 
